[gd_scene load_steps=80 format=2]

[ext_resource path="res://assets/player/idle/monke_idle_2.png" type="Texture" id=1]
[ext_resource path="res://assets/player/idle/monke_idle_4.png" type="Texture" id=2]
[ext_resource path="res://assets/player/idle/monke_idle_7.png" type="Texture" id=3]
[ext_resource path="res://assets/player/idle/monke_idle_3.png" type="Texture" id=4]
[ext_resource path="res://assets/player/idle/monke_idle_6.png" type="Texture" id=5]
[ext_resource path="res://assets/player/idle/monke_idle_1.png" type="Texture" id=6]
[ext_resource path="res://assets/player/idle/monke_idle_0.png" type="Texture" id=7]
[ext_resource path="res://assets/player/idle/monke_idle_5.png" type="Texture" id=8]
[ext_resource path="res://player/player.gd" type="Script" id=9]
[ext_resource path="res://assets/player/launch/monke_launch_3.png" type="Texture" id=10]
[ext_resource path="res://assets/player/hold/monke_hold_1.png" type="Texture" id=11]
[ext_resource path="res://assets/player/hold/monke_hold_5.png" type="Texture" id=12]
[ext_resource path="res://assets/player/hold/monke_hold_3.png" type="Texture" id=13]
[ext_resource path="res://assets/player/hold/monke_hold_2.png" type="Texture" id=14]
[ext_resource path="res://assets/player/hold/monke_hold_4.png" type="Texture" id=15]
[ext_resource path="res://assets/player/charge/monke_charge_2.png" type="Texture" id=16]
[ext_resource path="res://assets/player/charge/monke_charge_3.png" type="Texture" id=17]
[ext_resource path="res://assets/player/charge/monke_charge_0.png" type="Texture" id=18]
[ext_resource path="res://assets/player/charge/monke_charge_1.png" type="Texture" id=19]
[ext_resource path="res://assets/player/hold/monke_hold_0.png" type="Texture" id=20]
[ext_resource path="res://assets/player/rising/monke_rising_0.png" type="Texture" id=21]
[ext_resource path="res://assets/player/launch/monke_launch_2.png" type="Texture" id=22]
[ext_resource path="res://assets/player/falling/monke_falling_0.png" type="Texture" id=23]
[ext_resource path="res://assets/player/hold/monke_hold_6.png" type="Texture" id=24]
[ext_resource path="res://assets/player/launch/monke_launch_1.png" type="Texture" id=25]
[ext_resource path="res://assets/player/launch/monke_launch_0.png" type="Texture" id=26]
[ext_resource path="res://assets/player/walk/monke_walk_3.png" type="Texture" id=27]
[ext_resource path="res://assets/player/walk/monke_walk_0.png" type="Texture" id=28]
[ext_resource path="res://assets/player/walk/monke_walk_2.png" type="Texture" id=29]
[ext_resource path="res://assets/player/walk/monke_walk_1.png" type="Texture" id=30]
[ext_resource path="res://assets/music/Jump.ogg" type="AudioStream" id=31]
[ext_resource path="res://assets/music/Wall.ogg" type="AudioStream" id=32]
[ext_resource path="res://assets/music/Landing.ogg" type="AudioStream" id=33]
[ext_resource path="res://assets/player/get_banana/gold_banana_3.png" type="Texture" id=34]
[ext_resource path="res://assets/player/celebration/banana_idle_1.png" type="Texture" id=35]
[ext_resource path="res://assets/player/celebration/banana_idle_0.png" type="Texture" id=36]
[ext_resource path="res://assets/player/get_banana/gold_banana_1.png" type="Texture" id=37]
[ext_resource path="res://assets/player/get_banana/gold_banana_2.png" type="Texture" id=38]
[ext_resource path="res://assets/player/get_banana/gold_banana_0.png" type="Texture" id=39]
[ext_resource path="res://assets/music/Powerup.wav" type="AudioStream" id=40]
[ext_resource path="res://assets/player/idle/space/monke_idle_2.png" type="Texture" id=41]
[ext_resource path="res://assets/player/idle/space/monke_idle_6.png" type="Texture" id=42]
[ext_resource path="res://assets/player/idle/space/monke_idle_1.png" type="Texture" id=43]
[ext_resource path="res://assets/player/idle/space/monke_idle_3.png" type="Texture" id=44]
[ext_resource path="res://assets/player/idle/space/monke_idle_4.png" type="Texture" id=45]
[ext_resource path="res://assets/player/idle/space/monke_idle_5.png" type="Texture" id=46]
[ext_resource path="res://assets/player/idle/space/monke_idle_7.png" type="Texture" id=47]
[ext_resource path="res://assets/player/idle/space/monke_idle_0.png" type="Texture" id=48]
[ext_resource path="res://assets/player/charge/space/monke_charge_1.png" type="Texture" id=49]
[ext_resource path="res://assets/player/charge/space/monke_charge_3.png" type="Texture" id=50]
[ext_resource path="res://assets/player/charge/space/monke_charge_0.png" type="Texture" id=51]
[ext_resource path="res://assets/player/charge/space/monke_charge_2.png" type="Texture" id=52]
[ext_resource path="res://assets/player/falling/space/monke_falling_0.png" type="Texture" id=53]
[ext_resource path="res://assets/player/hold/space/monke_hold_1.png" type="Texture" id=54]
[ext_resource path="res://assets/player/hold/space/monke_hold_6.png" type="Texture" id=55]
[ext_resource path="res://assets/player/hold/space/monke_hold_0.png" type="Texture" id=56]
[ext_resource path="res://assets/player/hold/space/monke_hold_4.png" type="Texture" id=57]
[ext_resource path="res://assets/player/hold/space/monke_hold_3.png" type="Texture" id=58]
[ext_resource path="res://assets/player/hold/space/monke_hold_2.png" type="Texture" id=59]
[ext_resource path="res://assets/player/hold/space/monke_hold_5.png" type="Texture" id=60]
[ext_resource path="res://assets/player/launch/space/monke_launch_3.png" type="Texture" id=61]
[ext_resource path="res://assets/player/launch/space/monke_launch_1.png" type="Texture" id=62]
[ext_resource path="res://assets/player/launch/space/monke_launch_0.png" type="Texture" id=63]
[ext_resource path="res://assets/player/launch/space/monke_launch_2.png" type="Texture" id=64]
[ext_resource path="res://assets/player/rising/space/monke_rising_0.png" type="Texture" id=65]
[ext_resource path="res://assets/player/walk/space/monke_walk_0.png" type="Texture" id=66]
[ext_resource path="res://assets/player/walk/space/monke_walk_1.png" type="Texture" id=67]
[ext_resource path="res://assets/player/walk/space/monke_walk_2.png" type="Texture" id=68]
[ext_resource path="res://assets/player/walk/space/monke_walk_3.png" type="Texture" id=69]
[ext_resource path="res://assets/player/twerk/twerk_idle_1.png" type="Texture" id=70]
[ext_resource path="res://assets/player/pretwerk/twerk_00.png" type="Texture" id=71]
[ext_resource path="res://assets/player/pretwerk/twerk_01.png" type="Texture" id=72]
[ext_resource path="res://assets/player/pretwerk/twerk_02.png" type="Texture" id=73]
[ext_resource path="res://assets/player/pretwerk/twerk_03.png" type="Texture" id=74]
[ext_resource path="res://assets/player/pretwerk/twerk_04.png" type="Texture" id=75]
[ext_resource path="res://assets/player/pretwerk/twerk_05.png" type="Texture" id=76]
[ext_resource path="res://assets/player/twerk/twerk_idle_0.png" type="Texture" id=77]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ) ],
"loop": true,
"name": "pretwerk",
"speed": 6.0
}, {
"frames": [ ExtResource( 63 ), ExtResource( 62 ), ExtResource( 64 ), ExtResource( 61 ) ],
"loop": true,
"name": "space_launch",
"speed": 32.0
}, {
"frames": [ ExtResource( 56 ), ExtResource( 54 ), ExtResource( 59 ), ExtResource( 58 ), ExtResource( 57 ), ExtResource( 60 ), ExtResource( 55 ) ],
"loop": true,
"name": "space_hold",
"speed": 8.0
}, {
"frames": [ ExtResource( 48 ), ExtResource( 43 ), ExtResource( 41 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 42 ), ExtResource( 47 ) ],
"loop": true,
"name": "space_idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 65 ) ],
"loop": true,
"name": "space_rising",
"speed": 5.0
}, {
"frames": [ ExtResource( 53 ) ],
"loop": true,
"name": "space_falling",
"speed": 5.0
}, {
"frames": [ ExtResource( 51 ), ExtResource( 49 ), ExtResource( 52 ), ExtResource( 50 ) ],
"loop": true,
"name": "space_charge",
"speed": 8.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "rising",
"speed": 8.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "falling",
"speed": 8.0
}, {
"frames": [ ExtResource( 39 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 34 ) ],
"loop": false,
"name": "get_banana",
"speed": 8.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 25 ), ExtResource( 22 ), ExtResource( 10 ) ],
"loop": true,
"name": "launch",
"speed": 32.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 24 ) ],
"loop": true,
"name": "hold",
"speed": 8.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 30 ), ExtResource( 29 ), ExtResource( 27 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": false,
"name": "charge",
"speed": 8.0
}, {
"frames": [ ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ) ],
"loop": true,
"name": "space_walk",
"speed": 8.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 35 ) ],
"loop": true,
"name": "celebration",
"speed": 5.0
}, {
"frames": [ ExtResource( 77 ), ExtResource( 70 ) ],
"loop": true,
"name": "twerk",
"speed": 4.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.07218, 6.01142 )

[node name="PlayerNode" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 6
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.00237 )
shape = SubResource( 2 )

[node name="JumpAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 31 )
volume_db = -1.0
bus = "SFX"

[node name="LandingAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 33 )
volume_db = 6.0
bus = "SFX"

[node name="BonkAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 32 )
volume_db = 1.0
pitch_scale = 1.1
bus = "SFX"

[node name="PowerupAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 40 )
volume_db = -22.0
bus = "SFX"
__meta__ = {
"_editor_description_": ""
}
